[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptrace"
version = "0.1.0"
description = "Lightweight, dependency-free logging & cost/latency analytics for LLM API calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Stell", email = "2026.stell@gmail.com" }]
keywords = ["llm", "logging", "observability", "openai", "anthropic", "tokens", "cost-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
promptrace = "promptrace.cli:main"

[project.urls]
Homepage = "https://github.com/stell2026/promptrace"

[tool.setuptools.packages.find]
include = ["promptrace*"]
